--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Replace the header contents:
 
     <header>          
       <img src="https://live.staticflickr.com/65535/54184069091_0d800f91d5_o.png" width="100" height="100" alt="ali monogram">            
-      <h1>Firstname Lastname's Name of Site</h1>
+      <h1>Alison Hudson's 5 tips on Conducting a great interveiw</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
     </header>
