--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Replace the header contents:
 
     <header>          
       <img src="https://live.staticflickr.com/65535/54184069091_0d800f91d5_o.png" width="100" height="100" alt="ali monogram">            
-      <h1>Alison Hudson's 5 tips on Conducting a great interveiw</h1>
+      <h1>Alison Hudson's 5 tips on Conducting a great interview</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
     </header>
@@ -74,14 +74,14 @@ Add your introduction to your step-by-step-guide, including a title, time requir
         <div class="introduction">
 
           <div class="information">
-            <h1>How to make an awesome ...</h1>
+            <h1>How to have an awesome interview! ...</h1>
 
             <hr>
-            <p><b>Assembly time:</b> 30 minutes<br>
-              <b>Awesome rating:</b> 10% awesome</p>
+            <p><b>Prep time:</b> 60 minutes<br>
+              <b>Awesome rating:</b> 100000% awesome</p>
             <hr>
 
-            <p>Are you wondering how to make a cool rocket that can easily surpass a baking soda-vinegar rocket? It's really fun to make. Why don't you try to make it yourself? Follow the steps and you'll make a great rocket!</p>
+            <p>Interviews are scary let's make them a bit more aproachable! These tips are things I wish someone told me before jumping into talking to strangers to write about them.</p>
 
           </div>
 
