--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@ Add your Things You'll Need.
 -->         
             <ul class="list-of-items">
               <li><h2>Things You'll Need</h2></li>
-              <li>Bottle</li>
-              <li>Cardboard</li>
-              <li>Hand pump (bicycle)</li>
-              <li>Cork (vintage wines)</li>
-              <li>Duct Tape</li>
-              <li>Water</li>
+              <li>Time</li>
+              <li>Patience</li>
+              <li>Something to write notes on</li>
+              <li>A pen (It looks more profesional than a pencil)</li>
+              <li>A recording device or phone</li>
+              <li>Confidence!</li>
             </ul>
           </aside>
         </div>
