--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Make sure you come prepared.</h3>
+              <p>Have a list of what you need to know is very important but make sure you don’t bombard them with too many questions. Keep the questions short and concise. Also do a little bit of reaserach on the person you are interviewing even a quick google search of their name can help!</p> 
             </div>
           </li>
 
