--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Tape them all to the bottle at an angle of about 120 degrees between them.</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+              <h3>Create a comfortable enviornment for your interviewee.</h3>
+              <p>If you are meeting someone for an interview, pick a space they will be comforable in like their office or ask them about their favorite coffee shop and hold the interview there. If you are just interviewing strangers on the street pick an appropriate space for the questions you are asking. When doing an article on an upcomin gdance preformance you will get better responces from people invested in dance so spend more time in places like the arts building instead of the student union. </p>
 
               <!--
 This block contains a photo and has a caption.
