--- a/index.html
+++ b/index.html
@@ -132,16 +132,16 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
-              <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <a href="http://www.flickr.com/photos/etfoster/5159686547/in/photolist-2mBrquT-9eN5Bk-2qnAi7u-2mduTAL-2n7C8k9-fPwqAD-e46kXD-5GLGQR-2jj1AuM-jsWVNC-2oiSoTV-2fr8qNP-2kvGMy8" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
+              <p class="caption">Here is a cute coffee shop I found on flikr!.</p>
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Make a hole through the cork so that the bicycle pump can easily fit into it.</h3>
-              <p>Fix the pump tube to it with plasticine.</p>
+              <h3>Record the ENTIRE interview.</h3>
+              <p>You don't even need a fancy recording device; there are plenty of free apps for your phone like Voice Memos on ios or Sound Recorder for andreaid. Give the interviewee a heads up that you are recording. Also turn it on early sometimes the small talk makes for good soundbites and quotes to build their credability and background. </p>
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
