--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Take timestap notes..</h3>
+              <p>You don't need to write every word they say down! It can be very distracting if you are scribiling away in your note book while they talk. Make sure you can see the time stamp on the recorder and jote down quick notes like "5:47 water main repair" for example if you were interviewing a city worker.</p> 
             </div>
           </li>
 
