--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Take timestap notes..</h3>
+              <h3>Take timestap notes.</h3>
               <p>You don't need to write every word they say down! It can be very distracting if you are scribiling away in your note book while they talk. Make sure you can see the time stamp on the recorder and jote down quick notes like "5:47 water main repair" for example if you were interviewing a city worker.</p> 
             </div>
           </li>
@@ -158,8 +158,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Be invested, it's a conversation after all.</h3>
+              <p>At the end of the day you are talking with a real person. Don't treat them like you are asking Google questions. Engage in small talk and get to know them throughout the interview especially before asking any major questions. Building repour is a must beacauet if you hace built that trust then you will get more full answers. Mike Dronkers did a wonderful TEDx discussing how to interview anyone give it a quick watch it is very helpful!</p> 
 
                <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
             </div>
