--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html>
   <head><meta name="data-remix-projectId" content="11097">
 <meta name="data-remix-projectTitle" content="Instruction Challenge">
@@ -57,7 +56,7 @@ Replace the header contents:
 
     <header>          
       <img src="https://live.staticflickr.com/65535/54184069091_0d800f91d5_o.png" width="100" height="100" alt="ali monogram">            
-      <h1>Alison Hudson's 5 tips on Conducting a great interview</h1>
+      <h1>Alison Hudson's 5 Tips on Conducting a Great Interview</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
     </header>
@@ -74,7 +73,7 @@ Add your introduction to your step-by-step-guide, including a title, time requir
         <div class="introduction">
 
           <div class="information">
-            <h1>How to have an awesome interview! ...</h1>
+            <h1>How to have an awesome interview!</h1>
 
             <hr>
             <p><b>Prep time:</b> 60 minutes<br>
@@ -141,7 +140,7 @@ with a paragraph to create a photo with a caption.
           <li>
             <div class="content">
               <h3>Record the ENTIRE interview.</h3>
-              <p>You don't even need a fancy recording device; there are plenty of free apps for your phone like Voice Memos on ios or Sound Recorder for andreaid. Give the interviewee a heads up that you are recording. Also turn it on early sometimes the small talk makes for good soundbites and quotes to build their credability and background. </p>
+              <p>You don't even need a fancy recording device; there are plenty of free apps for your phone like Voice Memos on ios or Sound Recorder for android. Give the interviewee a heads up that you are recording. Also turn it on early sometimes the small talk makes for good soundbites and quotes to build their credability and background. </p>
        
             </div>
 
@@ -434,4 +433,15 @@ Customise the visual style and appearance of your guide.
     </style>
 
   </body>
+
+  <!DOCTYPE html>
+<html>
+<head>
+    <title>Background Color</title>
+</head>
+<body style="background-color: #facabf;">
+    <h1>Welcome to My Website</h1>
+</body>
+</html>
+
 </html>
