--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ Customise the visual style and appearance of your guide.
       ul {
         font-family:"Courier New", Courier, monospace;
         box-shadow:0px 2px 10px #ddd;
-        background-color: #00b0ae;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
+        background-color: ##facabf;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
         border: 3px solid #3b0b00;           /* CHANGE THE THINGS BORDER HERE */
         padding:0;
         margin:2em 0 0;
@@ -434,14 +434,6 @@ Customise the visual style and appearance of your guide.
 
   </body>
 
-  <!DOCTYPE html>
-<html>
-<head>
-    <title>Background Color</title>
-</head>
-<body style="background-color: #facabf;">
-    <h1>Welcome to My Website</h1>
-</body>
-</html>
+
 
 </html>
