--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ Customise the visual style and appearance of your guide.
       ul {
         font-family:"Courier New", Courier, monospace;
         box-shadow:0px 2px 10px #ddd;
-        background-color: ##facabf;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
+        background-color: #facabf;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
         border: 3px solid #3b0b00;           /* CHANGE THE THINGS BORDER HERE */
         padding:0;
         margin:2em 0 0;
