--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="http://www.flickr.com/photos/etfoster/5159686547/in/photolist-2mBrquT-9eN5Bk-2qnAi7u-2mduTAL-2n7C8k9-fPwqAD-e46kXD-5GLGQR-2jj1AuM-jsWVNC-2oiSoTV-2fr8qNP-2kvGMy8" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
-              <p class="caption">Here is a cute coffee shop I found on flikr!.</p>
+              <a href="https://www.flickr.com/photos/_nk/9599434281/" title="Coffee Shop"><img src="https://live.staticflickr.com/5516/9599434281_860508dbff_k.jpg" %=“6000” %=“4000” alt="Coffee Shop" ></a>
+              <p class="caption">Here is a cute coffee shop I found on Flikr!</p>
             </div>
           </li>
 
