--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ with a paragraph to create a photo with a caption.
               <h3>Be invested, it's a conversation after all.</h3>
               <p>At the end of the day you are talking with a real person. Don't treat them like you are asking Google questions. Engage in small talk and get to know them throughout the interview especially before asking any major questions. Building repour is a must beacauet if you hace built that trust then you will get more full answers. Mike Dronkers did a wonderful TEDx discussing how to interview anyone give it a quick watch it is very helpful!</p> 
 
-               <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/WDOQBPYEaNs?si=_otWSzbMi6eLuzSa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
           </li>
 
